Migrade to java 21 using rewrite
mvn -U org.openrewrite.maven:rewrite-maven-plugin:run -Drewrite.recipeArtifactCoordinates=org.openrewrite.recipe:rewrite-migrate-java:RELEASE -Drewrite.activeRecipes=org.openrewrite.java.migrate.UpgradeToJava21 -Drewrite.exportDatatables=true

https://docs.openrewrite.org/recipes/java/migrate/upgradetojava21

Signed-off-by: Marvin Froeder <marvin@datasqrl.com>