@@ -4,7 +4,6 @@ import com.datasqrl.vector.OnnxEmbed.CachedModel;
 import java.io.Serializable;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import com.google.common.cache.CacheLoader;
 import org.tribuo.interop.onnx.extractors.OnnxRunner;
 import org.tribuo.interop.onnx.extractors.Tokenizer;
@@ -14,7 +13,7 @@ public class CacheLoaderImpl extends CacheLoader<String, CachedModel> implements
 
     @Override
     public CachedModel load(String s) throws IllegalArgumentException {
-      Path modelPath = Paths.get(s);
+      Path modelPath = Path.of(s);
       Path tokenizerPath = modelPath.getParent().resolve(TOKENIZER_FILENAME);
 //      Preconditions.checkArgument(Files.isRegularFile(modelPath) && Files.isReadable(modelPath),
 //          "Could not read ONNX model from file [%s]. Check file is readable and correctly mounted.", modelPath);
