@@ -40,7 +40,7 @@ public class ExecutionStageHint implements SqrlHint {
     public ExecutionStageHint fromHint(RelHint hint) {
       List<String> options = hint.listOptions;
       Preconditions.checkArgument(options.size() == 1, "Invalid hint: %s", hint);
-      return new ExecutionStageHint(options.get(0));
+      return new ExecutionStageHint(options.getFirst());
     }
   }
 
