@@ -13,7 +13,7 @@ public class LPConverterUtil {
 
   public static Optional<Integer> getTimestampOrderIndex(RelCollation collation, Timestamps timestamp) {
     if (collation.getFieldCollations().isEmpty()) return Optional.empty();
-    RelFieldCollation fieldCol = collation.getFieldCollations().get(0);
+    RelFieldCollation fieldCol = collation.getFieldCollations().getFirst();
     if (timestamp.isCandidate(fieldCol.getFieldIndex())) return Optional.of(fieldCol.getFieldIndex());
     return Optional.empty();
   }
